--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/quilarque1/api-multiplicacion/issues"
   },
-  "homepage": "https://github.com/quilarque1/api-multiplicacion#readme"
+  "homepage": "https://github.com/quilarque1/api-multiplicacion#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
